# AlmostThere

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  README.md  gcovr.cfg  meson.build  meson_options.txt
.github/: FUNDING.yml
.github/workflows/: build.yml  codeql.yml
assets/locale/: en-US.lang  zh-CN.lang
assets/lua/: at.lua  preload.lua
assets/lualibs/: at.lua  atm.lua  bezier.lua
assets/shaders/: assist-ring  assist-ring.fsh  assist-ring.vsh  bg  hashi  hashi.fsh  hit-effect  hit-effect.fsh  hoshi  hoshi.vsh  hud-bar  hud-bar.fsh  hud-bar.vsh  mask.fsh  mask.vsh  opaque-tex  opaque-tex.fsh  opaque-tex.vsh  panel  panel.fsh  panel.vsh  rect  rect.fsh  skill-btn  skill-btn.fsh  skill-btn.vsh  text  text.fsh  text.vsh
assets/shaders/3d/: hashi  hoshi  mesh  rect  trans-mesh
assets/shaders/hud/: background  color-rect  effect-mask  hp-bar  shield-bar
assets/shaders/ui/: background  bar  box  button  effect-mask  hp-bar-drain  mask  opaque-tex  skill-btn  text
assets/textures/hud/: blood-effect.png~
assets/ui/: example.json  failed.json
inc/: miniaudio.h  stb_vorbis.c
inc/cglm/: util.h
inc/glad/: gl.h  glad.h
inc/glm/detail/: type_half.inl
inc/soloud/: soloud_fftfilter.h  soloud_filter.h  soloud_tedsid.h  soloud_wav.h
libs/: layout.c  meson.build  miniaudio.c
libs/glfw/: glad.c  meson.build
maps/example/: chart.lua
maps/mapload/: chart.lua
src/: meson.build
src/base/: meson.build
src/base/input/: InputPool.hh  meson.build
src/base/util/: Util.cc  Util.hh  meson.build
src/boot/: Boot.cc  Boot.hh  Main.cc  meson.build
src/engine/: meson.build
src/engine/glfw/: Audio.cc  Framework.cc  Graphics.cc  Input.cc  Main.cc  UIHook.cc  Window.cc  meson.build
src/engine/headless/: Audio.cc  Framework.cc  Graphics.cc  Input.cc  Main.cc  UIHook.cc  Window.cc  meson.build
src/engine/virtual/: Audio.hh  Framework.hh  Graphics.hh  Input.hh  UIHook.hh  Window.hh
src/event/: Event.cc  Event.hh  meson.build
src/gameplay/: meson.build
src/gameplay/ambient/: AmbientManager.cc  AmbientManager.hh  Particle.cc  Particle.hh  meson.build
src/gameplay/anim/: Animation.cc  Animation.hh  meson.build
src/gameplay/base/: Game.cc  Game.hh  PlayerStat.hh  meson.build
src/gameplay/control/: Controller.cc  Controller.hh  NoteControl.cc  NoteControl.hh  meson.build
src/gameplay/core/: Game.cc  Game.hh  HealthData.hh  PlayerStat.hh  Score.hh  meson.build
src/gameplay/event/: Event.cc  Event.hh  Schedule.cc  Schedule.hh  meson.build
src/gameplay/hud/: Bar.cc  Bar.hh  EffectMask.cc  EffectMask.hh  FloatText.cc  FloatText.hh  HPBar.cc  HPBar.hh  HUDDef.hh  HUDManager.cc  HUDManager.hh  Interact.cc  Interact.hh  PlayerBox.cc  PlayerBox.hh  ScoreDisplay.cc  ScoreDisplay.hh  ShieldBar.cc  ShieldBar.hh  TextBox.cc  TextBox.hh  meson.build
src/gameplay/input/: InputSet.cc  InputSet.hh  meson.build
src/gameplay/judge/: JudgeResponse.hh
src/gameplay/map/: Controller.hh  MapDef.hh  MapGen.hh  MapLoad.cc  MapLoad.hh  meson.build
src/gameplay/map/luamap/: LuaMapGen.cc  LuaMapGen.hh  meson.build
src/gameplay/objs/: Mask.cc  Mask.hh  Note.cc  Note.hh  NoteDef.hh  NoteEvents.cc  NoteEvents.hh  Slot.cc  Slot.hh  TickObject.cc  TickObject.hh  World.cc  World.hh  meson.build
src/gameplay/objs/notes/: CatchNote.cc  CatchNote.hh  FlatNote.cc  FlatNote.hh  NoteTools.cc  NoteTools.hh  SingletonNote.cc  SingletonNote.hh  meson.build
src/gameplay/objs/notes/variants/: Hashi.cc  Hashi.hh  Hoshi.cc  Hoshi.hh  Kyozetsu.cc  Kyozetsu.hh  Puresu.cc  Puresu.hh  Ranku.cc  Ranku.hh  Shizuku.hh  Tapu.hh  meson.build
src/gameplay/player/: Player.cc  Player.hh  PlayerEvents.cc  PlayerEvents.hh  meson.build
src/gameplay/player/chars/: CharAll.hh  CharList.hh  Default.hh  Neko.cc  Neko.hh  meson.build
src/gameplay/rules/: GameRules.hh
src/gameplay/score/: Score.cc  Score.hh  ScoreRecord.cc  ScoreRecord.hh  ScoreValue.cc  ScoreValue.hh  meson.build
src/gameplay/stats/: Game.hh  HealthData.hh  PlayerStat.hh  Score.cc  Score.hh
src/gameplay/time/: Timer.cc  Timer.hh  meson.build
src/gameplay/view/: Camera.cc  Camera.hh  View.cc  View.hh  meson.build
src/lua/: LuaExt.cc  LuaExt.hh  LuaSupport.cc  LuaSupport.hh  meson.build
src/support/: Locale.cc  Locale.hh  Resource.cc  Resource.hh  meson.build
src/ui/: meson.build
src/ui/comp/: Component.cc  Component.hh  meson.build
src/ui/comp/impl/: Box.cc  Box.hh  Button.cc  Button.hh  Label.cc  Label.hh  TextArea.cc  TextArea.hh  meson.build
src/ui/layout/: Layout.cc  Layout.hh  LayoutManager.cc  LayoutManager.hh  meson.build
src/ui/loader/: UILoader.cc  UILoader.hh  meson.build
src/ui/pages/: ResultScreen.cc  ResultScreen.hh  UIPage.cc  UIPage.hh  meson.build
src/user/: Account.cc  Account.hh  meson.build
src/util/: Event.hh  Util.cc  Util.hh  meson.build
test/: Animation.cc  AudioTest.cc  CheckTimer.cc  CheckUtil.cc  CreateWindow.cc  EventSystem.cc  FastMathBenchmark.cc  HUDRender.cc  LayoutTest.cc  LuaRepl.cc  MapLoad.cc  MapPlay.cc  MouseRayCasting.cc  NoteDraw.cc  NotePos.cc  NoteToolsTest.cc  Schedule.cc  ScoreCalc.cc  TestTools.hh  TextRender.cc  Timing.cc  UIHookTrigger.cc  UIRender.cc  meson.build
